# basil_rust

./: Cargo.toml  README.md  benchmark.csv  pyproject.toml
python/: benchmark_fns.py  benchmark_new.py  decay.py
src/: coordinates.rs  decay.rs  dwd.rs  gw.rs  kepler.rs  lib.rs  spin.rs  tides.rs
