[package]
name = "basil"
version = "0.1.0"
edition = "2024"
exclude = [
  "python/",
  "c/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "basil"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.27.0"
pyo3 = "0.27.1"
rayon = "1.11.0"
uom = "0.37.0"
